# C-CppDev-Basic

./: .gitignore  README.md
C/: CMakeLists.txt
C/Array/: ArrayAddress.c  ArrayBiMean.c  ArrayCreate.c  ArrayInitialize.c  ArrayVla.c  ArrayZBinarySearch.c  ArrayZMaxMin.c  ArrayZMerge.c  ArrayZSelectSort.c  ArrayZSelectSortPro.c  ArrayZSum.c
C/BitOperation/: CircleMove.c  CircleMoveEncrypt.c  DisplayBin.c  Encryt2.c  Mask.c  Swap.c
C/Chapter10_Struct_Union_Enum/: CMakeLists.txt  Enum.c  StructNest.c  StructSize.c  StructStack.c  Struct_10_Caution2.c  Struct_11_Stack.c  Struct_12_Typedef.c  Struct_1_Define.c  Struct_2_InitVisit.c  Struct_3_Assignment.c  Struct_4_Return.c  Struct_5_Array.c  Struct_6_AppVote.c  Struct_7_Nest.c  Struct_8_Memory.c  Struct_9_Caution1.c  Typedef.c  Union.c
C/Chapter11_List/: CMakeLists.txt  List.c  List_Pointer.c  List_Static.c  StaticList.c
C/Chapter12_File/: CMakeLists.txt  Encode_Decode.c  File_10_management.c  File_1_fopenfclose.c  File_2_fputcfgetc.c  File_3_Copy.c  File_4_fputsfgets.c  File_5_feof.c  File_6_freadfwrite.c  File_7_fread_return.c  File_8_encode_decode.c  File_9_struct_fread.c  File_feof.c  File_fopenfclose.c  Management.c  Struct_Fread.c  stu.data
C/Chapter13_BitOperation/: Bit_1_DisplayBin.c  Bit_2_Mask.c  Bit_3_CircleMove.c  Bit_4_Swap.c  Bit_5_Encrypt.c  Bit_6_Encryt2.c  Bit_7_CircleMoveEncrypt.c  CMakeLists.txt  Encrypt.c
C/Chapter1DataType/: helloworld.c
C/Chapter1_DataType/: CMakeLists.txt  DataType_1_HelloWorld.c  DataType_2_Binary.c  DataType_3_VariableNamingRules.c  DataType_4_SizeOfType.c  DataType_6_ValidBit.c  DataType_7_ASCII.c  DataType_9_Printf.c  cast_promote2int.c  cast_type.c  constant.c  float_compare_zero.c  io_scanf.c
C/Chapter2_Operator/: CMakeLists.txt  Operator_1_Assignment.c  Operator_4_Logical.c  Operator_7_Sizeof.c  arithmetic.c  expression.c  relational.c
C/Chapter3_FlowControl/: CMakeLists.txt  FlowControl_2_Switch.c  FlowControl_3_For.c  FlowControl_4_While.c  FlowControl_5_DoWhile.c  FlowControl_7_Continue.c  break.c  goto.c  if_else.c  return.c
C/Chapter4_Array/: CMakeLists.txt
C/Chapter5_Pointer/: 2DArrayAndPointer.c  ArrayIdx.c  CMakeLists.txt  Null.c  PointerType.c  Pointer_10_RelationOp.c  Pointer_11_ArrayIdxVisit.c  Pointer_12_1DArray.c  Pointer_13_2DArray.c  Pointer_1_MemoryLine.c  Pointer_2_VariableAddress.c  Pointer_3_PointerConstant.c  Pointer_4_PointerVariable.c  Pointer_5_Nature.c  Pointer_6_Declaration.c  Pointer_7_Assignment.c  Pointer_8_Null.c  Pointer_9_MathOp.c  VariablePointer.c  declare.c
C/Chapter6_Function/: CMakeLists.txt  Function_10_2DArray.c  Function_11_SelectSort.c  Function_1_Rand.c  Function_2_Localtime.c  Function_3_Math.c  Function_4_Max.c  Function_7_Swap.c  Function_9_1DArray.c  PassByValue.c  Recursive.c
C/Chapter7_VariableScope/: CMakeLists.txt  VSCope_3_Static.c  VScope_1_Auto.c  VScope_2_Extern.c  VaribaleScope.c
C/Chapter8_String/: ArgcArgv.c  CMakeLists.txt  CharArrString.c  ConstantString.c  InOutString.c  PointerArray.c  RawString_strcpy.c  RawString_strlen.c  String_10_Sort.c  String_11_ArgcArgv.c  String_1_Constant.c  String_2_CharArrString.c  String_3_CharArrString.c  String_4_InOut.c  String_5_strlen.c  String_6_strcat.c  String_7_strcpy.c  String_8_strcmp.c  String_9_PointerArray.c
C/Chapter9_Memory/: Alloc_calloc.c  Alloc_isNULL.c  Alloc_malloc.c  Alloc_vla.c  CMakeLists.txt  HeapMemory.c  Memory_1_Heap.c  Memory_2_malloc.c  Memory_3_calloc.c  Memory_4_realloc.c  Memory_5_vla.c  Memory_6_isNULL.c  Memory_7_Return.c
C/DArray/: DArrayAddress.c  DArrayBiMean.c  DArrayCreate.c  DArrayInit.c  DArrayZChess.c  DArrayZPrint.c  DArrayZReverse.c
C/DataTypeAndOperator/: ASCII.c  binary.c  comma.c  constant.c  floatComZero.c  forceCast.c  operatorCondition.c  operatorExpress.c  operatorLogic.c  operatorMath.c  operatorRelation.c  printf.c  swap.c  typePromote.c
C/File/: File_Copy.c  File_fputcfgetc.c  File_fputsfgets.c  File_fread_return.c  File_freadfwrite.c  a.out
C/FlowOfControl/: for.c  goto.c
C/Function/: Deliver2DArray.c  DeliverArray.c  Localtime.c  Math.c  PassByAddress.c  Rand.c  mySwap.c  selectSortFunc.c
C/Memory/: Alloc_realloc.c  Return.c
C/Pointer/: ArrayAndPointer.c  MemoryLine.c  Pointer.c  PointerAssignment.c  PointerRelation.c  VariableAddress.c
C/String/: PointerArraySort.c  RawString_strcat.c  RawString_strcmp.c  StringTypec.c
C/Struct/: StructArray.c  StructAssignment.c  StructCaution1.c  StructCaution2.c  StructInit.c  StructType.c  Union.c  Vote.c
C/VaribaleScope/: AutoDescription.c  ExternDescription.c  StaticVariable.c
CDeep/: CMakeLists.txt
CDeep/Chapter10_Conclusion/: 2.ReadConf.c
CDeep/Chapter10_Memory/: CMakeLists.txt  Memory_1_memset.cpp  Memory_2_memcpy.cpp  Memory_3_memmove.cpp  Memory_4_memcmp.cpp  Memory_5_memchr.cpp
CDeep/Chapter12_Conclusion/: App_2_ReadConf.c  CMakeLists.txt
CDeep/Chapter1_DataType/: CMakeLists.txt  DataType_1_Format.c  DataType_2_Init.c  DataType_3_TypeCast.c  DataType_4_Unsigned.c  DataType_5_Exec.c  Format.c  TypeCast.c  Unsigned.c
CDeep/Chapter2_ProcessSpace/: CMakeLists.txt  PS_1_processSpace.c  PS_2_Stack.c  PS_3_Exec.c
CDeep/Chapter3_Array/: Array_10_ArrayName.c  Array_1_1dArray.c  Array_2_ReturnHeapArray.c  Array_3_SubMax.c  Array_4_2dArray.c  Array_5_LineStorage.c  Array_7_Pointer.c  Array_9_1d22d.c  CMakeLists.txt  Delivery2dArray.c  SubMax.c
CDeep/Chapter4_Pointer/: AllocSpace2.c  CMakeLists.txt  Constant.c  Encrypted.c  FILE2Sqlite.c  Pointer.c  Pointer2.c  Pointer3.c  PointerArray1.c  PointerArray2.c  Pointer_10_Alloc2dSpace2.c  Pointer_11_Alloc2dSpace3.c  Pointer_12_AppEncrypted.c  Pointer_13_Readfile2mem.c  Pointer_15_ConstModifyPointer.c  Pointer_16_ConstAppStrcpy.c  Pointer_1_Nature.c  Pointer_2_MultiPointer.c  Pointer_3_FILE2Sqlite.c  Pointer_4_SecondaryPStepSize.c  Pointer_5_PArray1.c  Pointer_6_PArray2.c  Pointer_7_ArgEnv.c  Pointer_8_1dHeap.c  Pointer_9_Alloc2dSpace1.c  Readfile2mem.c  Review.c
CDeep/Chapter7_Search/: search.c  (+2 more)
CPP/: CMakeLists.txt
DataStructure/: CMakeLists.txt
Extend/: CMakeLists.txt
STL/: CMakeLists.txt
(+473 files in other folders)
